:lipstick: - Prevent datagrid captions from wrapping.

--- a/rijkshuisstijl/sass/components/datagrid/_datagrid.scss
+++ b/rijkshuisstijl/sass/components/datagrid/_datagrid.scss
@@ -261,7 +261,9 @@ $datagrid-spacing-cell-h: ($datagrid-spacing-row-h / 2) + $datagrid-spacing-row-
   }
 
   &__caption &__link {
+    @include ellipsis;
     color: inherit;
+    margin-right: $datagrid-spacing-cell-h;
   }
 
   &__label {
